[package]
name = "nexis-account-decompiler"
version = "1.9.29"
description = "Nexis account decoder"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-account-decompiler"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
nexis-config-program = { path = "../programs/config", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-vote-program = { path = "../programs/vote", version = "=1.9.29" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"
zstd = "0.9.0"

exzo-account-program = { path = "../programs/exzo-account-program" }
nexis-relying-party-program = { path = "../programs/nexis-relying-party-program" }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
