[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-accounts-benchmark"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
publish = false

[dependencies]
log = "0.4.14"
rayon = "1.5.1"
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
clap = "2.33.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
