/**
 * This file contains the Cargo.toml configuration for the `nexis-accounts-cluster-bench` package.
 * It specifies the package metadata, dependencies, and dev-dependencies.
 * The package is used for benchmarking the accounts cluster in the Nexis Blockchain project.
 * For more information, refer to the repository and homepage URLs provided.
 */
/**
 * This file contains the Cargo.toml configuration for the `nexis-accounts-cluster-bench` package.
 * It specifies the package metadata, dependencies, and dev-dependencies.
 * The package is used for benchmarking the accounts cluster in the Nexis Blockchain project.
 * For more information, refer to the repository and homepage URLs provided.
 */

[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-accounts-cluster-bench"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
nexis-account-decompiler = { path = "../account-decompiler", version = "=1.9.29" }
nexis-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
nexis-client = { path = "../client", version = "=1.9.29" }
nexis-core = { path = "../core", version = "=1.9.29" }
nexis-faucet = { path = "../faucet", version = "=1.9.29" }
nexis-gossip = { path = "../gossip", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-net-utils = { path = "../net-utils", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-test-validator = { path = "../test-validator", version = "=1.9.29" }
nexis-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
nexis-local-cluster = { path = "../local-cluster", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
