[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-banking-bench"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
nexis-core = { path = "../core", version = "=1.9.29" }
nexis-gossip = { path = "../gossip", version = "=1.9.29" }
nexis-ledger = { path = "../ledger", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-perf = { path = "../perf", version = "=1.9.29" }
nexis-poh = { path = "../poh", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
