/**
 * This file contains the Cargo.toml configuration for the Nexis banks client package.
 * It specifies the package name, version, description, authors, repository, license, homepage, and documentation.
 * It also lists the dependencies and dev-dependencies required by the package.
 */
[package]
name = "nexis-banks-client"
version = "1.9.29"
description = "Nexis banks client"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-banks-client"
edition = "2021"

[dependencies]
borsh = "0.9.1"
futures = "0.3"
nexis-banks-interface = { path = "../banks-interface", version = "=1.9.29" }
nexis-program = { path = "../sdk/program", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
tarpc = { version = "0.27.2", features = ["full"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-banks-server = { path = "../banks-server", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "nexis_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
