[package]
name = "nexis-banks-interface"
version = "1.9.29"
description = "Nexis banks RPC interface"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
tarpc = { version = "0.27.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "nexis_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
