[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2018"
name = "nexis-bench-tps-evm"
version = "1.0.0"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.8"
rayon = "1.4.0"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
nexis-clap-utils = { path = "../clap-utils", version = "1.4.0" }
nexis-core = { path = "../core", version = "1.4.0" }
nexis-genesis = { path = "../genesis", version = "1.4.0" }
nexis-client = { path = "../client", version = "1.4.0" }
nexis-faucet = { path = "../faucet", version = "1.4.0" }
nexis-logger = { path = "../logger", version = "1.4.0" }
nexis-metrics = { path = "../metrics", version = "1.4.0" }
nexis-measure = { path = "../measure", version = "1.4.0" }
nexis-net-utils = { path = "../net-utils", version = "1.4.0" }
nexis-runtime = { path = "../runtime", version = "1.4.0" }
nexis-sdk = { path = "../sdk", version = "1.4.0" }
nexis-gossip = { path = "../gossip", version = "1.9.23" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
nexis-evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
rand_isaac = "0.1.1"
simple_logger = "2.2"

[dev-dependencies]
serial_test = "0.4.0"
serial_test_derive = "0.4.0"
nexis-local-cluster = { path = "../local-cluster", version = "1.4.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
