[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-bench-tps"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rayon = "1.5.1"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
nexis-core = { path = "../core", version = "=1.9.29" }
nexis-genesis = { path = "../genesis", version = "=1.9.29" }
nexis-client = { path = "../client", version = "=1.9.29" }
nexis-faucet = { path = "../faucet", version = "=1.9.29" }
nexis-gossip = { path = "../gossip", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-metrics = { path = "../metrics", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-net-utils = { path = "../net-utils", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }

[dev-dependencies]
serial_test = "0.5.1"
nexis-local-cluster = { path = "../local-cluster", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
