[package]
name = "nexis-bucket-map"
version = "1.9.29"
description = "nexis-bucket-map"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-bucket-map"
readme = "../README.md"
repository = "https://github.com/nexis-network/nexis"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
rayon = "1.5.0"
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
memmap2 = "0.5.0"
log = { version = "0.4.11" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
rand = "0.7.0"
fs_extra = "1.2.0"
tempfile = "3.2.0"

[lib]
crate-type = ["lib"]
name = "nexis_bucket_map"

[[bench]]
name = "bucket_map"
