[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-cli-output"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
Inflector = "0.11.4"
indicatif = "0.16.2"
semver = "1.0.6"
serde = "1.0.130"
serde_json = "1.0.72"
nexis-account-decompiler = { path = "../account-decompiler", version = "=1.9.29" }
nexis-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
nexis-client = { path = "../client", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
nexis-vote-program = { path = "../programs/vote", version = "=1.9.29" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
