[package]
name = "nexis-client-test"
version = "1.9.29"
description = "Nexis RPC Test"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-client-test"
edition = "2021"
publish = false

[dependencies]
serde_json = "1.0.72"
serial_test = "0.5.1"
nexis-client = { path = "../client", version = "=1.9.29" }
nexis-ledger = { path = "../ledger", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-merkle-tree = { path = "../merkle-tree", version = "=1.9.29" }
nexis-metrics = { path = "../metrics", version = "=1.9.29" }
nexis-perf = { path = "../perf", version = "=1.9.29" }
nexis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
nexis-rpc = { path = "../rpc", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-test-validator = { path = "../test-validator", version = "=1.9.29" }
nexis-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
systemstat = "0.1.10"

[dev-dependencies]
nexis-logger = { path = "../logger", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
