[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-dos"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
publish = false

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
nexis-core = { path = "../core", version = "=1.9.29" }
nexis-gossip = { path = "../gossip", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-net-utils = { path = "../net-utils", version = "=1.9.29" }
nexis-perf = { path = "../perf", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
nexis-client = { path = "../client", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
