[package]
name = "nexis-download-utils"
version = "1.9.29"
description = "Nexis Download Utils"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "nexis_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
