[package]
name = "nexis-entry"
version = "1.9.29"
description = "Nexis Entry"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-poh"
edition = "2021"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.1"
serde = "1.0.130"
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-merkle-tree = { path = "../merkle-tree", version = "=1.9.29" }
nexis-metrics = { path = "../metrics", version = "=1.9.29" }
nexis-perf = { path = "../perf", version = "=1.9.29" }
nexis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
bincode = "1.3.3"

[dev-dependencies]
matches = "0.1.9"
nexis-logger = { path = "../logger", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "nexis_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
