[package]
name = "nexis-faucet"
version = "1.9.29"
description = "Nexis Faucet"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
nexis-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
nexis-cli-config = { path = "../cli-config", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-metrics = { path = "../metrics", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "nexis_faucet"

[[bin]]
name = "nexis-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
