[package]
name = "nexis-frozen-abi"
version = "1.9.29"
description = "Nexis Frozen ABI"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-frozen-abi"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
bv = { version = "0.11.1", features = ["serde"] }
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
sha2 = "0.9.8"
nexis-frozen-abi-macro = { path = "macro", version = "=1.9.29" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
nexis-logger = { path = "../logger", version = "=1.9.29" }
generic-array = { version = "0.14.4", default-features = false, features = ["serde", "more_lengths"]}
memmap2 = "0.5.0"

[build-dependencies]
rustc_version = "0.4"
