[package]
name = "nexis-genesis-utils"
version = "1.9.29"
description = "Nexis Genesis Utils"
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-download-utils"
edition = "2021"

[dependencies]
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-download-utils = { path = "../download-utils", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "nexis_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
