[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-genesis"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.130"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
nexis-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
nexis-cli-config = { path = "../cli-config", version = "=1.9.29" }
nexis-entry = { path = "../entry", version = "=1.9.29" }
nexis-ledger = { path = "../ledger", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-stake-program = { path = "../programs/stake", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
nexis-vote-program = { path = "../programs/vote", version = "=1.9.29" }

nexis-evm-loader-program = { path = "../evm-utils/programs/evm_loader" }
evm-state = { path = "../evm-utils/evm-state" }
evm-rpc = { path = "../evm-utils/evm-rpc" }

tempfile = "3.2.0"
once_cell = "1.7.2"
log = "0.4"

[[bin]]
name = "nexis-genesis"
path = "src/main.rs"

[lib]
name = "nexis_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["with_evm"]
with_evm = []
