[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-geyser-plugin-interface"
description = "The Nexis Geyser plugin interface."
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-geyser-plugin-interface"

[dependencies]
log = "0.4.11"
thiserror = "1.0.30"
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-transaction-status = { path = "../transaction-status", version = "=1.9.29" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
