[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-geyser-plugin-manager"
description = "The Nexis Geyser plugin manager."
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-geyser-plugin-manager"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
libloading = "0.7.2"
log = "0.4.11"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
nexis-geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-metrics = { path = "../metrics", version = "=1.9.29" }
nexis-rpc = { path = "../rpc", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-transaction-status = { path = "../transaction-status", version = "=1.9.29" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
