[package]
authors = ["Nexis Maintainers <maintainers@nexis.foundation>"]
edition = "2021"
name = "nexis-gossip"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.29"
repository = "https://github.com/nexis-network/nexis"
license = "Apache-2.0"
homepage = "https://nexis.network/"
documentation = "https://docs.rs/nexis-gossip"

[dependencies]
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
flate2 = "1.0"
indexmap = { version = "1.7", features = ["rayon"] }
itertools = "0.10.1"
log = "0.4.14"
lru = "=0.7.1"
matches = "0.1.9"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.1"
serde = "1.0.130"
serde_bytes = "0.11"
serde_derive = "1.0.103"
nexis-bloom = { path = "../bloom", version = "=1.9.29" }
nexis-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
nexis-client = { path = "../client", version = "=1.9.29" }
nexis-entry = { path = "../entry", version = "=1.9.29" }
nexis-frozen-abi = { path = "../frozen-abi", version = "=1.9.29" }
nexis-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.9.29" }
nexis-ledger = { path = "../ledger", version = "=1.9.29" }
nexis-logger = { path = "../logger", version = "=1.9.29" }
nexis-measure = { path = "../measure", version = "=1.9.29" }
nexis-metrics = { path = "../metrics", version = "=1.9.29" }
nexis-net-utils = { path = "../net-utils", version = "=1.9.29" }
nexis-perf = { path = "../perf", version = "=1.9.29" }
nexis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.29" }
nexis-runtime = { path = "../runtime", version = "=1.9.29" }
nexis-streamer = { path = "../streamer", version = "=1.9.29" }
nexis-sdk = { path = "../sdk", version = "=1.9.29" }
nexis-version = { path = "../version", version = "=0.6.3" }
nexis-vote-program = { path = "../programs/vote", version = "=1.9.29" }
thiserror = "1.0"

[dev-dependencies]
num_cpus = "1.13.0"
serial_test = "0.5.1"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "nexis-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
